fix(responsive): extra margins on elsewhere section

--- a/themes/shiro/assets/src/sass/css/scss/objects/_modules.scss
+++ b/themes/shiro/assets/src/sass/css/scss/objects/_modules.scss
@@ -421,8 +421,10 @@ a.hover-img-zoom {
 .elsewhere-wikimedia {
 	@include padding(0, 20, 0, 40);
 
-	.mw-1360 {
-		@include padding(0, 0, 0, 0);
+	.mw-980 {
+		@media (max-width: $medium-bp) {
+			@include padding(0, 0, 0, 0);
+		}
 	}
 
 	.h4 {
